// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DwollaPayIn 1`] = `
<DocumentFragment>
  <dwolla-payin
    blob=""
    customerid="123"
    token=""
  />
</DocumentFragment>
`;

exports[`with optional props 1`] = `
<DocumentFragment>
  <dwolla-payin
    amount="10"
    blob=""
    customerid="123"
    token=""
  />
</DocumentFragment>
`;
